hphp/hack/test/typecheck/semi_mixed_lambda_ko.php.exp
File "semi_mixed_lambda_ko.php", line 10, characters 29-30:
Typing error (Typing[4429])
  File "semi_mixed_lambda_ko.php", line 10, characters 29-34:
  Expected `num` because this is used in an arithmetic operation
  File "semi_mixed_lambda_ko.php", line 10, characters 14-19:
  But got `string`
